--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ a {
    color: var(--primary-text-color);
  }
  .projects-list p {
+   font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.9;
