--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,9 @@ a {
 .site-nav a:focus{
    color: var(--accent-text);
 }
+.site-nav .current {
+   color: var(--accent-text);
+}
 
 .site-info a {
     font-weight: 500;
@@ -80,6 +83,9 @@ a {
 }
 .site-info a:hover {
     color: var(--accent-text);
+}
+.site-info a:focus {
+   color: var(--accent-text);
 }
 
 /* Основний заголовок з кнопкою */
