--- a/css/styles.css
+++ b/css/styles.css
@@ -173,12 +173,14 @@ a {
 
  /* блок кнопок портфоліо */
  .portfolio-button button {
+   font-family: inherit;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.6;
    letter-spacing: 0.03em;
    cursor: pointer;
    color: var(--primary-text-color);
+   background-color: var(--team-background);
  }
  .portfolio-button button:hover {
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
